--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -1,12 +1,81 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/bch.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bartosz Chmielecki</title>
-    
+    <meta
+      name="description"
+      content="Bartosz Chmielecki – freelancer tworzący profesjonalne strony internetowe w Zabrzu. Wizytówki, one page, sklepy internetowe – nowoczesne i zoptymalizowane pod SEO."
+    />
+    <meta
+      name="keywords"
+      content="Bartosz Chmielecki, strony internetowe Zabrze, freelancer React, strony WordPress, strony bez PHP, nowoczesne strony WWW, React websites, WordPress design, strony headless, headless CMS, WordPress jako headless, web developer React, szybkie strony internetowe, strony zoptymalizowane pod SEO, strony dla firm, strony e-commerce, WooCommerce, strony na WordPress, landing page w React, Next.js, Gatsby.js, headless WordPress, strony z API, REST API w WordPress, GraphQL, CMS bez PHP, dynamiczne strony internetowe, optymalizacja React, strony dla startupów, modern web design, strony responsywne, profesjonalne strony WordPress, strony interaktywne, witryny internetowe, najlepsze strony w React, projektowanie UX/UI, strony dla biznesu, web development Zabrze, branding stron internetowych, optymalizacja szybkości stron, audyt SEO, hosting WordPress, zarządzanie treścią, strony na zamówienie, animacje w React, dynamiczne treści na stronach, front-end developer Zabrze, strony oparte na JavaScript, indywidualne projekty stron, modernizacja stron, poprawa wydajności stron, SEO-friendly strony, React + Tailwind, strony SPA, statyczne strony internetowe, optymalizacja kodu, budowa stron od podstaw, freelancer web developer, najlepsze technologie webowe, zarządzanie WordPress bez PHP, strony firmowe, blogi na WordPress, optymalizacja Google PageSpeed, API-first strony, custom WordPress themes, nowoczesny web design, strony WordPress na Gutenbergu, strony na Elementor, strony WordPress z ACF, najlepsze rozwiązania dla stron WWW."
+    />
+    <meta name="author" content="Bartosz Chmielecki" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta
+      property="og:title"
+      content="Bartosz Chmielecki – Strony Internetowe Zabrze | Freelancer"
+    />
+    <meta
+      property="og:description"
+      content="Tworzę nowoczesne strony internetowe w Zabrzu – od wizytówek po sklepy internetowe. Szybkie, responsywne i zoptymalizowane pod SEO."
+    />
+    <meta
+      property="og:image"
+      content="http://bartoszchmielecki.com/img/bartosz.jpg"
+    />
+    <meta property="og:url" content="http://bartoszchmielecki.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Bartosz Chmielecki – Strony Internetowe Zabrze | Freelancer"
+    />
+    <meta
+      name="twitter:description"
+      content="Freelancer projektujący strony internetowe w Zabrzu – szybkie, responsywne i zoptymalizowane pod SEO."
+    />
+    <meta
+      name="twitter:image"
+      content="http://bartoszchmielecki.com/img/bartosz.jpg"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" href="img/favicon.png" type="image/png" />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Google Analytics (opcjonalnie) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXX-Y"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "UA-XXXXX-Y");
+    </script>
+
+    <title>Bartosz Chmielecki – Strony Internetowe Zabrze | Freelancer</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
